--- a/_pcss/helpers/_typography.pcss
+++ b/_pcss/helpers/_typography.pcss
@@ -47,9 +47,9 @@
     --typography__fontWeight--semiBold: 600;
     --typography__fontWeight--bold: 700;
 
-    --typography__fontFamily--primary: "Montserrat", "system", sans-serif;
-    --typography__fontFamily--secondary: "Oswald", "system", sans-serif;
-    --typography__fontFamily--monospace: monospace, monospace;
+    --typography__fontFamily--primary: "Montserrat", "Open Sans", Helvetica,
+        Arial, sans-serif;
+    --typography__fontFamily--secondary: "Oswald", Impact, "system", sans-serif;
 
     @media (--mq__tablet--min) {
         --typography__fontSize--px: 18;
