--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
 
       <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' https://*.gstatic.com/ https://cdn.jsdelivr.net/ https://formspree.io/;
-      style-src 'unsafe-inline' 'self' https://*.googleapis.com/;
+      style-src 'self' 'unsafe-inline' https://*.googleapis.com/;
       img-src 'self' https://*.cloudinary.com/ https://*.bcbits.com/;
-      script-src 'unsafe-inline' 'self' https://cdn.jsdelivr.net/;
-      connect-src https://dev.to/ https://cdn.jsdelivr.net/ https://formspree.io/;
+      script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net/;
+      connect-src 'self' https://dev.to/ https://cdn.jsdelivr.net/ https://formspree.io/;
       frame-src https://www.youtube-nocookie.com/ https://formspree.io/;
       ">
       <!-- Google / Search Engine Tags -->
