--- a/_pcss/base/_globals.pcss
+++ b/_pcss/base/_globals.pcss
@@ -15,3 +15,12 @@ body {
 *:after {
     box-sizing: inherit;
 }
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.0001s !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.0001s !important;
+        scroll-behavior: auto !important;
+    }
+}
