--- a/_pcss/all.pcss
+++ b/_pcss/all.pcss
@@ -51,3 +51,12 @@
 @import "pages/portfolio";
 @import "pages/project";
 @import "pages/blog";
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.0001s !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.0001s !important;
+        scroll-behavior: auto !important;
+    }
+}
