--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -135,5 +135,7 @@
             </div>
         </div>
     </div>
-    <div class="footer__copyright">2020 © codeAdrian. All rights reserved.</div>
+    <div class="footer__copyright">
+        <small> &copy; 2015-present Adrian Bece. All Rights Reserved. </small>
+    </div>
 </footer>
