--- a/_pcss/helpers/_media-queries.pcss
+++ b/_pcss/helpers/_media-queries.pcss
@@ -13,5 +13,6 @@
 @custom-media --mq__desktopCustom--min (min-width: 71.313rem); /* 1441 px */
 @custom-media --mq__desktop--max (max-width: 80rem); /* 1280px */
 @custom-media --mq__desktopMedium--min (min-width: 80.0625rem); /* 1281px */
+@custom-media --mq__desktopLarge--min (min-width: 120rem); /* 1920px */
 
 @custom-media --mq__custom--hero (min-width: 64.063rem) and (min-height: 35.5rem);
