--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -39,7 +39,7 @@ layout: default
         <div><strong>Platform: </strong>{{ page.platform }}</div>
         <div><strong>Type:</strong> {{ page.contribution }}</div>
         <div>
-            <strong>View project</strong>
+            <strong>View project:</strong>
             <a target="_blank" rel="noopener noreferrer" href="{{ page.link }}"
                 >Project website</a
             >
