--- a/_pcss/components/_containers.pcss
+++ b/_pcss/components/_containers.pcss
@@ -1,3 +1,7 @@
 .container--alt {
     background-color: var(--color__grayscale--light);
 }
+
+.container--secondary {
+    background-color: var(--color__secondary);
+}
