--- a/_pcss/layout/_hero.pcss
+++ b/_pcss/layout/_hero.pcss
@@ -248,7 +248,7 @@
     }
 }
 
-@media (--mq__desktopLarge--min) {
+@media (--mq__desktopHuge--min) {
     .hero__wrapper {
         margin-right: var(--spacing__horizontal--6);
     }
