--- a/_pcss/helpers/_media-queries.pcss
+++ b/_pcss/helpers/_media-queries.pcss
@@ -10,9 +10,10 @@
 @custom-media --mq__tablet--min (min-width: 48rem); /* 768px */
 @custom-media --mq__tablet--max (max-width: 64rem); /* 1024px */
 @custom-media --mq__desktop--min (min-width: 64.063rem); /* 1025 px */
-@custom-media --mq__desktopCustom--min (min-width: 71.313rem); /* 1441 px */
+@custom-media --mq__desktopCustom--min (min-width: 71.313rem); /* 1136 px */
 @custom-media --mq__desktop--max (max-width: 80rem); /* 1280px */
 @custom-media --mq__desktopMedium--min (min-width: 80.0625rem); /* 1281px */
-@custom-media --mq__desktopLarge--min (min-width: 120rem); /* 1920px */
+@custom-media --mq__desktopLarge--min (min-width: 90.0625rem); /* 1441px */
+@custom-media --mq__desktopHuge--min (min-width: 120rem); /* 1920px */
 
 @custom-media --mq__custom--hero (min-width: 64.063rem) and (min-height: 35.5rem);
