--- a/_pcss/pages/_portfolio.pcss
+++ b/_pcss/pages/_portfolio.pcss
@@ -17,7 +17,7 @@
     margin-top: calc(-1 * var(--spacing__vertical--2));
 
     & .featuredList__controls {
-        margin-top: var(--spacing__verical--2);
+        margin-top: var(--spacing__vertical--1);
     }
 }
 
