--- a/src/assets/css/_block.banner.pcss
+++ b/src/assets/css/_block.banner.pcss
@@ -1,6 +1,6 @@
 .banner {
   background-color: var(--color-gray-light);
-  padding: var(--spacing-4) 0;
+  padding: var(--spacing-4) 0 var(--spacing-5);
   text-align: center;
 
   &__container {
