--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,6 +11,8 @@
 
 @import "_component.button.pcss";
 @import "_component.link.pcss";
+@import "_component.carousel.pcss";
+@import "_component.card.pcss";
 
 @import "_layout.footer.pcss";
 @import "_layout.header.pcss";
@@ -18,3 +20,4 @@
 @import "_block.hero.pcss";
 @import "_block.linklist.pcss";
 @import "_block.banner.pcss";
+@import "_block.about.pcss";
