--- a/src/index.njk
+++ b/src/index.njk
@@ -8,4 +8,4 @@ author: Your name here
 {% include 'layouts/partials/hero.njk' %}
 
 {% include 'layouts/partials/fullBanner.njk' %}
-{% include 'layouts/partials/featuredProjects.njk' %}
+{% include 'layouts/partials/about.njk' %}
