--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -1,9 +1,9 @@
 <div class="glide">
     <div data-glide-el="track" class="glide__track">
         <ul class="glide__slides">
-            <li class="glide__slide"></li>
-            <li class="glide__slide"></li>
-            <li class="glide__slide"></li>
+            <li class="glide__slide">Slide 1</li>
+            <li class="glide__slide">Slide 2</li>
+            <li class="glide__slide">Slide 3</li>
         </ul>
     </div>
 </div>
