--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -8,5 +8,5 @@ layout: base
 </main>
 {% include 'layouts/partials/footer.njk' %}
 
-<script src="/assets/js/glide.min.js"></script>
-<script src="/assets/js/glideInit.js"></script>
+<script src="/assets/js/swiper-bundle.min.js"></script>
+<script src="/assets/js/slider-init.js"></script>
