--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -17,6 +17,7 @@
     height: calc(100% - var(--spacing-2));
     backface-visibility: hidden;
     transform: translateZ(0);
+    filter: blur(2px);
 
     & circle {
       animation: fadeOut 10s var(--transition-easing) alternate infinite;
