--- a/src/index.njk
+++ b/src/index.njk
@@ -9,3 +9,5 @@ author: Your name here
 
 {% include 'layouts/partials/fullBanner.njk' %}
 {% include 'layouts/partials/about.njk' %}
+{% include 'layouts/partials/featuredProjects.njk' %}
+
