--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -1,9 +1,33 @@
-<div class="glide">
-    <div data-glide-el="track" class="glide__track">
-        <ul class="glide__slides">
-            <li class="glide__slide">Slide 1</li>
-            <li class="glide__slide">Slide 2</li>
-            <li class="glide__slide">Slide 3</li>
-        </ul>
+<section class="u-container-spacing">
+    <div class="featured-projects u-container u-container--larger">
+        <article>
+            <span class="featured-projects__control featured-projects__control--disabled" id="js-featured-control-prev">Previous</span>
+            <span class="featured-projects__control" id="js-featured-control-next">Next</span>
+            <ul class="u-list-reset">
+                {% for project in collections.portfolio %}
+                    {% if loop.index === 1 %}
+                        <li class="project-card project-card--active" id="js-featured-content-{{ loop.index }}">
+                            {{ project.data.title }}
+                        </li>
+                    {% else %}
+                        <li class="project-card" id="js-featured-content-{{ loop.index }}">
+                            {{ project.data.title }}
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </article>
+        <article class="swiper" id="js-featured-images">
+            <ul class="u-list-reset swiper-wrapper">
+                {% for project in collections.portfolio %}
+                    <li class="swiper-slide featured-projects__slide--images">
+                        <figure class="featured-projects__figure">
+                            {% image "project-bg.png", "", "featured-projects__image--bg" %}
+                            {% image "portfolio/"+project.data.image, "", "featured-projects__image--main" %}
+                        </figure>
+                    </li>
+                {% endfor %}
+            </ul>
+        </article>
     </div>
-</div>
+</section>
