--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -9,4 +9,5 @@ layout: base
 {% include 'layouts/partials/footer.njk' %}
 
 <script src="/assets/js/swiper-bundle.min.js"></script>
-<script src="/assets/js/slider-init.js"></script>
+<script src="/assets/js/about-slider.js"></script>
+<script src="/assets/js/featured-slider.js"></script>
