--- a/src/_includes/layouts/partials/hero.njk
+++ b/src/_includes/layouts/partials/hero.njk
@@ -8,7 +8,7 @@
             <ul class="u-list-reset hero__list">
                 <li class="hero__list-item">Fullstack engineer</li>
                 <li class="hero__list-item">Award-winning developer</li>
-                <li class="hero__list-item">Writer at CSS-Tricks and Smashing Magazine</li>
+                <li class="hero__list-item">Distinguished author</li>
             </ul>
         </article>
         <figure class="hero__figure">
