--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -28,15 +28,12 @@
 
 .featured-projects__slide--images:not(.swiper-slide-active) {
   filter: grayscale(100%);
-  opacity: 0.1;
+  opacity: 0.35;
 }
 
-.featured-projects__slide--content:not(.swiper-slide-active) {
-  opacity: 0 !important;
-}
-
-.featured-projects__slide--content.swiper-slide-active {
-  opacity: 1 !important;
+.swiper-slide-duplicate:not(.swiper-slide-active) {
+  filter: grayscale(100%);
+  opacity: 0.04;
 }
 
 .featured-projects__control--disabled {
