--- a/src/assets/css/_component.card.pcss
+++ b/src/assets/css/_component.card.pcss
@@ -29,6 +29,7 @@
     padding-bottom: var(--spacing-n1);
     border-bottom: 2px solid var(--color-primary);
     font-size: var(--font-size-2);
+    letter-spacing: 0.005rem;
   }
 
   &__content {
