--- a/src/_includes/layouts/partials/about.njk
+++ b/src/_includes/layouts/partials/about.njk
@@ -1,21 +1,19 @@
-<section class="u-container u-container--larger about" id="js-about">
-    <article data-glide-el="track" class="glide__track">
-        <ul class="glide__slides about__list">
-            {% for about in collections.about %}
-                <li class="glide__slide card">
-                    <div class="card__wrapper">
-                        <figure class="card__figure card__figure--icon">
-                            <span class="icon icon--{{ about.data.icon }}"></span>
-                        </figure>
-                        <h2 class="card__title">
-                            {{ about.data.title }}
-                        </h2>
-                        <p class="card__content">
-                            {{ about.data.description }}
-                        </p>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    </article>
+<section class="u-container u-container--larger about swiper" id="js-about">
+    <ul class="u-list-reset about__list swiper-wrapper">
+        {% for about in collections.about %}
+            <li class="swiper-slide card">
+                <div class="card__wrapper">
+                    <figure class="card__figure card__figure--icon">
+                        <span class="icon icon--{{ about.data.icon }}"></span>
+                    </figure>
+                    <h2 class="card__title">
+                        {{ about.data.title }}
+                    </h2>
+                    <p class="card__content">
+                        {{ about.data.description }}
+                    </p>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 </section>
