--- a/src/index.njk
+++ b/src/index.njk
@@ -4,10 +4,9 @@ title: "Your UNIQUE title here"
 description: "Your UNIQUE description here."
 author: Your name here
 ---
-
 {% include 'layouts/partials/hero.njk' %}
-
 {% include 'layouts/partials/fullBanner.njk' %}
 {% include 'layouts/partials/about.njk' %}
 {% include 'layouts/partials/featuredProjects.njk' %}
+{% include 'layouts/partials/allProjects.njk' %}
 
