--- a/src/assets/css/_block.project-card.pcss
+++ b/src/assets/css/_block.project-card.pcss
@@ -1,6 +1,14 @@
 .project-card {
-  opacity: 0;
   transition: opacity 0.5s var(--transition-easing);
+  position: absolute;
+  top: 50%;
+  transform: translate3d(0, -50%, 0);
+  padding-left: var(--spacing-4);
+}
+
+.project-card:not(.project-card--active) {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .project-card--active {
