--- a/src/assets/css/_block.featured.pcss
+++ b/src/assets/css/_block.featured.pcss
@@ -44,7 +44,7 @@
   display: block;
   aspect-ratio: 1;
   font-size: var(--font-size-1);
-  padding: var(--spacing-n2);
+  padding: calc(var(--spacing-n2) + var(--spacing-n3));
   margin: var(--spacing-n2) 0;
 
   &:disabled {
