--- a/src/assets/css/_block.project-card.pcss
+++ b/src/assets/css/_block.project-card.pcss
@@ -1,5 +1,5 @@
 .project-card {
-  transition: opacity 0.5s var(--transition-easing);
+  transition: opacity 0.25s ease-in-out;
   position: absolute;
   top: 50%;
   transform: translate3d(0, -50%, 0);
