--- a/src/_includes/layouts/_default/homepage.njk
+++ b/src/_includes/layouts/_default/homepage.njk
@@ -11,3 +11,4 @@ layout: base
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/about-slider.js"></script>
 <script src="/assets/js/featured-slider.js"></script>
+<script src="/assets/js/testimonials-slider.js"></script>
