--- a/src/index.njk
+++ b/src/index.njk
@@ -9,4 +9,5 @@ author: Your name here
 {% include 'layouts/partials/about.njk' %}
 {% include 'layouts/partials/featuredProjects.njk' %}
 {% include 'layouts/partials/allProjects.njk' %}
+{% include 'layouts/partials/testimonials.njk' %}
 
