--- a/src/assets/css/_component.card.pcss
+++ b/src/assets/css/_component.card.pcss
@@ -51,4 +51,10 @@
       color: var(--color-primary);
     }
   }
+
+  &__image {
+    border-radius: 100%;
+    overflow: hidden;
+    border: 4px solid var(--color-gray-lightest);
+  }
 }
